fixed slider toggle bug and button overflow bug, adjusted secondary button width, readded ga

--- a/css/css_main.css
+++ b/css/css_main.css
@@ -167,6 +167,10 @@ a:active {
 	z-index: 10000;
 }
 
+.button_edit {
+	overflow: hidden;
+}
+
 #button_toggle {
 	display: none;
     position: fixed; 
@@ -198,7 +202,7 @@ a:active {
 	opacity: 0;
 	min-width: 695px;
 	top: -10px;
-	left: 235px;
+	left: 25%;
 	z-index: 10;
 }
 
